@@ -26,7 +26,7 @@ Config:
     ticker_interval is set to 0 and the process exits, then the ProcessInput
     will exit, invoking the restart behavior (see :ref:`configuring_restarting`).
     Ignored when used in conjunction with :ref:`config_process_directory_input`,
-    where ticker_interval value is instead parsed from the directory path.
+    where `ticker_interval` value is instead parsed from the directory path.
 - immediate_start (bool):
     If true, heka starts process immediately instead of waiting for first
     interval defined by ticker_interval to pass. Defaults to false.
