@@ -36,10 +36,10 @@ For example, a process_dir might look like this::
 This indicates one process to be run every five seconds, two processes to be
 run every 61 seconds, and one process to be run every 302 seconds.
 
-Note that ProcessDirectory will ignore any files that are not nested one level
-deep, are not in a folder named for an integer 0 or greater, and do not end
-with '.toml'. Each file which meets these criteria, such as those shown in the
-example above, should contain the TOML configuration for exactly one
+Note that ProcessDirectoryInput will ignore any files that are not nested one
+level deep, are not in a folder named for an integer 0 or greater, and do not
+end with '.toml'. Each file which meets these criteria, such as those shown in
+the example above, should contain the TOML configuration for exactly one
 :ref:`config_process_input`, matching that of a standalone ProcessInput with
 the following restrictions:
 
@@ -49,8 +49,11 @@ the following restrictions:
 - Any specified `ticker_interval` value will be *ignored*. The ticker interval
   value to use will be parsed from the directory path.
 
-If the specified process fails to run or the ProcessInput config fails for any
-other reason, ProcessDirectoryInput will log an error message and continue.
+By default, if the specified process fails to run or the ProcessInput config
+fails for any other reason, ProcessDirectoryInput will log an error message and
+continue, as if the ProcessInput's `can_exit` flag has been set to true.
+If the managed ProcessInput's `can_exit` flag is manually set to `false`, it
+will trigger a Heka shutdown.
 
 Config:
 
@@ -58,12 +61,14 @@ Config:
     Amount of time, in seconds, between scans of the process_dir. Defaults to
     300 (i.e. 5 minutes).
 - process_dir (string, optional):
-	This is the root folder of the tree where the scheduled jobs are defined.
-	Absolute paths will be honored, relative paths will be computed relative
-	to Heka's globally specified share_dir. Defaults to "processes" (i.e.
-	"$share_dir/processes").
+    This is the root folder of the tree where the scheduled jobs are defined.
+    Absolute paths will be honored, relative paths will be computed relative to
+    Heka's globally specified share_dir. Defaults to "processes" (i.e.
+    "$share_dir/processes").
 - retries (RetryOptions, optional):
-    A sub-section that specifies the settings to be used for restart behavior.
+    A sub-section that specifies the settings to be used for restart behavior
+    of the ProcessDirectoryInput (not the individual ProcessInputs, which are
+    configured independently).
     See :ref:`configuring_restarting`
 
 Example:
