@@ -118,7 +118,7 @@ func (pdi *ProcessDirectoryInput) loadInputs() (err error) {
 		return
 	}
 
-	// Remove any running inputs that are no longer specified.
+	// Remove any running inputs that are no longer specified
 	for name, entry := range pdi.inputs {
 		if _, ok := pdi.specified[name]; !ok {
 			pdi.pConfig.RemoveInputRunner(entry.ir)
@@ -130,6 +130,7 @@ func (pdi *ProcessDirectoryInput) loadInputs() (err error) {
 	// Iterate through the specified inputs and activate any that are new or
 	// have been modified.
 	for name, newEntry := range pdi.specified {
+
 		if runningEntry, ok := pdi.inputs[name]; ok {
 			if runningEntry.config.Equals(newEntry.config) {
 				// Nothing has changed, let this one keep running.
@@ -201,22 +202,15 @@ func (pdi *ProcessDirectoryInput) procDirWalkFunc(path string, info os.FileInfo,
 		pdi.ir.LogError(fmt.Errorf("loading process file '%s': %s", path, err))
 		return nil
 	}
-	// Override the config settings we manage, make the runner, and store the entry.
+	// Override the ticker_interval, make the runner, and store the entry.
 	entry.config.TickerInterval = uint(tickInterval)
-
-	commonConfig := entry.maker.CommonTypedConfig().(CommonInputConfig)
-	commonConfig.Retries = RetryOptions{
-		MaxDelay:   "30s",
-		Delay:      "250ms",
-		MaxRetries: -1,
-	}
-	entry.maker.SetCommonTypedConfig(commonConfig)
 
 	runner, err := entry.maker.MakeRunner("")
 	if err != nil {
 		pdi.ir.LogError(fmt.Errorf("making runner: %s", err.Error()))
 		return nil
 	}
+
 	entry.ir = runner.(InputRunner)
 	entry.ir.SetTransient(true)
 	pdi.specified[path] = entry
@@ -244,6 +238,14 @@ func (pdi *ProcessDirectoryInput) loadProcessFile(path string) (*ProcessEntry, e
 	mutMaker.SetName(path)
 	if err = mutMaker.PrepConfig(); err != nil {
 		return nil, fmt.Errorf("can't prep config: %s", err)
+	}
+
+	// CanExit is true by default on ProcessInput's we spawn
+	commonConfig := mutMaker.CommonTypedConfig().(CommonInputConfig)
+	if commonConfig.CanExit == nil {
+		b := true
+		commonConfig.CanExit = &b
+		mutMaker.SetCommonTypedConfig(commonConfig)
 	}
 
 	entry := &ProcessEntry{
